test/JDBC/expected/BABEL-2942.out
-- japanese_cs_as collation
CREATE TABLE t_japan_csas(t varchar(20) collate japanese_cs_as);
GO

INSERT INTO t_japan_csas (t) VALUES 
('う'), ('ｳ'), ('C'), ('かさ'), ('ば'), ('ﾊﾟ'), ('３'), ('ﾊﾞ'), ('c'), ('ｲ'), ('がく'), ('Ｃ'), ('ウ'),('ﾊ'),  
('1'), ('ｱ'),('パ'), ('b'), ('2'), ('ハ'),('Ｂ'), ('B'), ('バ'),('１'), ('Ａ'), ('ぱ'),('い'),('ア'), 
('か'), ('A'), ('a'), ('ａ'),('AbC'), ('aBc'), ('は');
GO
~~ROW COUNT: 35~~


select t from t_japan_csas order by 1 ;
GO
~~START~~
varchar
1
１
2
３
a
ａ
A
Ａ
aBc
AbC
b
B
Ｂ
c
C
Ｃ
ア
ｱ
い
ｲ
う
ウ
ｳ
か
がく
かさ
は
ハ
ﾊ
ば
バ
ﾊﾞ
ぱ
パ
ﾊﾟ
~~END~~


select t from t_japan_csas where t= 'は' ;
GO
~~START~~
varchar
は
~~END~~


drop table t_japan_csas;
GO

-- japanese_ci_as collation
CREATE TABLE t_japan_cias(t varchar(20) collate japanese_ci_as);
GO
~~ERROR (Code: 2714)~~

~~ERROR (Message: relation "t_japan_cias" already exists)~~


INSERT INTO t_japan_cias (t) VALUES 
('う'), ('ｳ'), ('C'), ('かさ'), ('ば'), ('ﾊﾟ'), ('３'), ('ﾊﾞ'), ('c'), ('ｲ'), ('がく'), ('Ｃ'), ('ウ'),('ﾊ'),  
('1'), ('ｱ'),('パ'), ('b'), ('2'), ('ハ'),('Ｂ'), ('B'), ('バ'),('１'), ('Ａ'), ('ぱ'),('い'),('ア'), 
('か'), ('A'), ('a'), ('ａ'),('AbC'), ('aBc'), ('は');
GO
~~ROW COUNT: 35~~


select t from t_japan_cias order by 1 ;
GO
~~START~~
varchar
1
１
１
1
１
１
1
１
1
1
2
2
2
2
2
３
３
３
３
３
a
Ａ
Ａ
a
Ａ
ａ
Ａ
Ａ
A
A
A
a
ａ
ａ
A
a
ａ
a
ａ
A
AbC
aBc
AbC
aBc
AbC
aBc
AbC
aBc
AbC
aBc
b
b
Ｂ
B
B
Ｂ
b
b
Ｂ
B
B
Ｂ
Ｂ
B
b
c
c
Ｃ
C
C
c
Ｃ
c
C
Ｃ
c
Ｃ
C
C
Ｃ
ｱ
ｱ
ア
ｱ
ｱ
ア
ｱ
ア
ア
ア
ｲ
ｲ
い
い
い
い
ｲ
ｲ
い
ｲ
う
ｳ
ウ
う
ｳ
ウ
う
ｳ
ウ
う
ｳ
ウ
う
ｳ
ウ
か
か
か
か
か
がく
がく
がく
がく
がく
かさ
かさ
かさ
かさ
かさ
ハ
は
ﾊ
ハ
は
ﾊ
ハ
ﾊ
ﾊ
ﾊ
は
は
ハ
は
ハ
バ
バ
バ
ﾊﾞ
ば
ば
ば
ﾊﾞ
ﾊﾞ
ば
バ
バ
ﾊﾞ
ﾊﾞ
ば
ﾊﾟ
ぱ
ﾊﾟ
ﾊﾟ
ぱ
ぱ
パ
パ
パ
ﾊﾟ
ぱ
パ
パ
ﾊﾟ
ぱ
~~END~~


select t from t_japan_cias where t= 'は' ;
GO
~~START~~
varchar
ﾊ
ハ
は
ﾊ
ハ
は
ﾊ
ハ
は
ﾊ
ハ
は
ﾊ
ハ
は
~~END~~


delete table t_japan_cias;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'table' at line 1 and character position 7)~~


-- japanese_ci_ai collation
CREATE TABLE t_japan_ciai(t varchar(20) collate japanese_ci_ai);
GO

INSERT INTO t_japan_ciai (t) VALUES 
('う'), ('ｳ'), ('C'), ('かさ'), ('ば'), ('ﾊﾟ'), ('３'), ('ﾊﾞ'), ('c'), ('ｲ'), ('がく'), ('Ｃ'), ('ウ'),('ﾊ'),  
('1'), ('ｱ'),('パ'), ('b'), ('2'), ('ハ'),('Ｂ'), ('B'), ('バ'),('１'), ('Ａ'), ('ぱ'),('い'),('ア'), 
('か'), ('A'), ('a'), ('ａ'),('AbC'), ('aBc'), ('は');
GO
~~ROW COUNT: 35~~


select t from t_japan_ciai order by 1 ;
GO
~~START~~
varchar
１
1
2
３
Ａ
ａ
a
A
AbC
aBc
B
Ｂ
b
Ｃ
C
c
ｱ
ア
い
ｲ
う
ｳ
ウ
か
がく
かさ
パ
ﾊ
ﾊﾞ
ﾊﾟ
ば
バ
は
ハ
ぱ
~~END~~


select t from t_japan_ciai where t= 'は' ;
GO
~~START~~
varchar
ば
ﾊﾟ
ﾊﾞ
ﾊ
パ
ハ
バ
ぱ
は
~~END~~


drop table t_japan_ciai;
GO
